# nullables

./: .gitignore  CMakeLists.txt  gimo-amalgamate.hpp
.github/workflows/: build.yml  generate_amalgamate_header.yml
benchmarks/: CMakeLists.txt  main.cpp
cmake/: EnableSanitizers.cmake  EnableWarnings.cmake  FindCatch2.cmake  Findgimo-mimic++.cmake  Findmimic++.cmake  Findsanitizers-cmake.cmake  Gimo-HasStdOptionalMonadic.cmake  GimoInstallRules.cmake  GimoReadVersion.cmake  NullablesInstallRules.cmake  ReadNullablesVersion.cmake  gimo-config.cmake.in  nullables-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/: gimo.hpp
include/gimo/: Algorithm.hpp  Common.hpp  Config.hpp  Pipeline.hpp  Version.hpp
include/gimo/algorithm/: AndThen.hpp  BasicAlgorithm.hpp  Common.hpp  OrElse.hpp  Transform.hpp
include/gimo_ext/: std_optional.hpp
include/nullables/: Common.hpp  Version.hpp  nullables.hpp
test/: Algorithm.cpp  AndThenAlgorithm.cpp  CMakeLists.txt  Common.cpp  OrElseAlgorithm.cpp  Pipeline.cpp  TestCommons.hpp  TransformAlgorithm.cpp  nullables.cpp  pch.hpp
test/algorithm/: AndThen.cpp  BasicAlgorithm.cpp  CMakeLists.txt  Common.cpp  OrElse.cpp  Transform.cpp
test/config/: CMakeLists.txt  Version.cpp
tools/amalgamate-headers/: CMakeLists.txt
